<resources>
    <string name="app_name">Travel App</string>
    <string name="title_1">Let’s enjoy the</string>
    <string name="title_2">Beautiful World</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create an account</string>
    <string name="skip">Skip</string>
    <string name="option_icon">card icon</string>
    <string name="person_photo">person_photo</string>
    <string name="background_options">background_options</string>
</resources>